--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,16 +1,40 @@
-/*body { 
-	margin: 0; 
-	padding: 0; 
-}*/
+body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+#wrapper {
+	min-height: 100%;
+	position: relative;
+}
+
+.footer {
+	width: 100%;
+	height: 50px;
+	position: fixed;
+	bottom: 0;
+	background-color: #000;
+}
+
+#footer-p {
+	padding-left: 10px;
+	padding-top: 15px;
+}
 
 #map {
-/*	position: absolute; 
-	top: 150px; 
-	bottom: 100px; 
-	width: 100%; */
 	height: 500px;
 	width: 100%;
 	margin: 0;
+	padding-bottom: 50px;
+}
+
+#map-outer {
+	padding-bottom: 50px;
+}
+
+#login-outer {
+	padding-bottom: 100px;
 }
 
 .header {
@@ -18,20 +42,57 @@
 	margin-top: 0px;
 }
 
-.navbar {
+.navbar-default {
 	background-color: #000;
-	/*padding-bottom: 100px;*/
 	margin: 0;
 	height: 150px;
 	border-radius: 0;
 	border: none;
-}
-
-a {
-	color: #fff;
+/*	position: fixed;
+	top: 0;*/
+	width: 100%;
 }
 
 a.navbar-brand {
-	color: #fff; /* doesn't work */
+	color: #fff;
 	font-size: 30px;
 }
+
+.breadcrumb {
+	background-color: #fff;
+}
+
+li {
+	color: #000;
+}
+
+h1 {
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+h5 {
+	color: #fff;
+}
+
+#user-greeting {
+	padding-left: 20px;
+}
+
+.fp-bumper {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.main-text {
+	height: 300px;
+}
+
+/*.glyphicon {
+	background-color: yellow;
+}*/
+img {
+	position: left;
+}
+
+
