--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,10 +6,17 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="/script.js" type="text/javascript"></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
 <link href="/stylesheet.css" rel="stylesheet">
 
+
+<script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-map.js?key=YOUR_KEY_HERE"></script>
+<script src="http://www.mapquestapi.com/sdk/leaflet/v1.s/mq-routing.js?key=YOUR_KEY_HERE"></script>
+
+<body>
+<div id="wrapper">
 <nav class="navbar navbar-default" role="navigation">
  	<!-- <div class="container-fluid"> -->
  	<div class="col-md-12 col-sm-12">
@@ -21,20 +28,29 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
       		</button>
-      		<a class="navbar-brand" href="#">Seattle Brewery Crawler</a>
+      		<a class="navbar-brand" href="/">Seattle Brewery Crawler</a>
+      		<% if(user && typeof user !== undefined) { %>
+			<h5 id="user-greeting">Hello, <%= typeof user.name === "string" ? user.name : "Uknown" %></h5>
+			<% } %>
     	</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      		<ul class="nav navbar-nav">
       		</ul>
+      		<% if(user && typeof user !== undefined) { %>
       		<ul class="nav navbar-nav navbar-right">
-        		<li><a href="#">Home</a></li>
-        		<li><a href="#">Routes</a></li>
-        		<li><a href="#">My Routes</a></li>
-        		<li><a href="#">Login</a></li>
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/list">My Breweries</a></li>
+        		<li><a href="/logout">Logout</a></li>
+        	</ul>
+        	<% } else { %>
+        	<ul class="nav navbar-nav navbar-right">
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/login">Login</a></li>
+        		<% } %>
           	</ul>
    		</div>
  	</div>
 </nav>
-<!-- </body> -->
+
