--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,6 +13,7 @@
 <% for(var i = 0; i < returnedList.length; i++) { %>
 
 	<h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> - <%= returnedList[i].brewery_name %></h4>
+	<!-- <a href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a> -->
 
 
 <% } %>
