--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>SBC</title>
+<title>SBF</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
@@ -24,7 +24,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
       		</button>
-      		<a class="navbar-brand" href="/">Seattle Brewery Crawler</a>
+      		<a class="navbar-brand" href="/">Seattle Brewery Finder</a>
       		<% if(user && typeof user !== undefined) { %>
 			<h5 id="user-greeting">Hello, <%= typeof user.name === "string" ? user.name : "Uknown" %></h5>
 			<% } %>
