App works. First push to git hub, with .env stuff all in place.

--- a/views/brewery.ejs
+++ b/views/brewery.ejs
@@ -3,7 +3,7 @@
 <div class="col-md-12 col-sm-12">
 	<ol class="breadcrumb">
 		<li><a href="/">Home</a></li>
-		<li class="active"><%= breweryIndiv.data[0].name %></li>
+		<li class="active">Brewery</li>
 	</ol>
 </div>
 
