--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -45,7 +45,7 @@ body {
 .navbar-default {
 	background-color: #000;
 	margin: 0;
-	height: 150px;
+	height: 100px;
 	border-radius: 0;
 	border: none;
 /*	position: fixed;
@@ -56,6 +56,7 @@ body {
 a.navbar-brand {
 	color: #fff;
 	font-size: 30px;
+	/*font-family: 'Poiret One', cursive;*/
 }
 
 .breadcrumb {
@@ -103,6 +104,14 @@ img {
 	color: #fff;
 	border: none;
 }
-/*.map-btn:active {
-	border: none;
-}*/
+
+a.fav-list {
+	font-size: 20px;
+	color: #000;
+	padding: 10px;
+}
+
+h1#fav-list-h1 {
+	padding-bottom: 50px;
+}
+
