--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,8 @@
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
 <link href="/stylesheet.css" rel="stylesheet">
 
+<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+
 <body>
 <div id="wrapper">
 <nav class="navbar navbar-default" role="navigation">
