--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,12 +8,14 @@
 </div>
 
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-md-offset-4">
-	<h1><%= user.name %>'s Favorite Breweries</h1>
+	<h1 id="fav-list-h1"><%= user.name %>'s Favorite Breweries</h1>
 
 <% for(var i = 0; i < returnedList.length; i++) { %>
 
-	<h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> - <%= returnedList[i].brewery_name %></h4>
-	<!-- <a href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a> -->
+<li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a></li>
+
+	<!-- <h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> - <%= returnedList[i].brewery_name %></h4> -->
+<!-- 	<li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a><button name="brewery_id" value="<%= returnedList[i].brewery_id%>" class="btn btn-primary btn-sm">Delete</button></li> -->
 
 
 <% } %>
