--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,8 @@
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
 <link href="/stylesheet.css" rel="stylesheet">
 
-<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 
 <body>
 <div id="wrapper">
@@ -38,14 +39,14 @@
       		</ul>
       		<% if(user && typeof user !== undefined) { %>
       		<ul class="nav navbar-nav navbar-right">
-        		<li><a href="/">Home</a></li>
-        		<li><a href="/list">My Breweries</a></li>
-        		<li><a href="/logout">Logout</a></li>
+        		<li><a id="navlink"href="/">Home</a></li>
+        		<li><a id="navlink"href="/list">My Breweries</a></li>
+        		<li><a id="navlink"href="/logout">Logout</a></li>
         	</ul>
         	<% } else { %>
         	<ul class="nav navbar-nav navbar-right">
-        		<li><a href="/">Home</a></li>
-        		<li><a href="/login">Login</a></li>
+        		<li><a id="navlink"href="/">Home</a></li>
+        		<li><a id="navlink"href="/login">Login</a></li>
         		<% } %>
           	</ul>
    		</div>
