--- a/views/header.ejs
+++ b/views/header.ejs
@@ -40,12 +40,14 @@
       		<% if(user && typeof user !== undefined) { %>
       		<ul class="nav navbar-nav navbar-right">
         		<li><a id="navlink"href="/">Home</a></li>
+        		<!-- <li><a id="navlink"href="/"class="scroll_down">About</a></li> -->
         		<li><a id="navlink"href="/list">My Breweries</a></li>
         		<li><a id="navlink"href="/logout">Logout</a></li>
         	</ul>
         	<% } else { %>
         	<ul class="nav navbar-nav navbar-right">
         		<li><a id="navlink"href="/">Home</a></li>
+        		<!-- <li><a id="navlink"href="/"class="scroll_down">About</a></li> -->
         		<li><a id="navlink"href="/login">Login</a></li>
         		<% } %>
           	</ul>
