--- a/views/header.ejs
+++ b/views/header.ejs
@@ -35,8 +35,8 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-     		<ul class="nav navbar-nav">
-      		</ul>
+<!--      		<ul class="nav navbar-nav">
+      		</ul> -->
       		<% if(user && typeof user !== undefined) { %>
       		<ul class="nav navbar-nav navbar-right">
         		<li><a id="navlink"href="/">Home</a></li>
