Changed my google fonts links to https, which should make them show up on heroku

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,13 +11,13 @@
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
 <link href="/stylesheet.css" rel="stylesheet">
 
-<link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 
 <body>
 <div id="wrapper">
 <nav class="navbar navbar-default" role="navigation">
- 	<!-- <div class="container-fluid"> -->
+ 	<div class="container-fluid">
  	<div class="col-md-12 col-sm-12">
     <!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header">
