--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -30,10 +30,6 @@ body {
 	/*padding-bottom: 50px;*/
 }
 
-#map-outer {
-	/*padding-bottom: 50px;*/
-}
-
 #login-outer {
 	padding-bottom: 100px;
 }
@@ -226,8 +222,26 @@ h1#fav-list-h1 {
 	border-radius: 0;
 }
 
-/*.infoButton {
-	border-bottom-left-radius: 0;
-	border-top-left-radius: 0;
-}*/
+@media (max-width: 600px) {
+	
+	#map {
+		height: 300px;
+	}
+
+	a.navbar-brand {
+		font-size: 20px;
+		padding-left: 0;
+		padding-top: 5px;
+	}
+
+	h1.fp-heading {
+		padding-top: 50px;
+		padding-bottom: 25px;
+	}
+
+	p {
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+}
 
