--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
 </div>
 
 <div class="col-md-8 col-sm-8 col-md-offset-2 col-md-offset-2">
-	<p>I'm passionate about technology, music, and you guessed it... local beer. I am a web developer, with experience in Javascript, Node.js, jQuery, Express.js, Ruby on Rails, HTML5, and CSS3. This list continues to grow, as I'm a passionate life long learner, always looking for ways to push myself. Feel free to connect with me! 
+	<p>I'm passionate about technology, music, and you guessed it... local beer. I am a web developer, with experience in Javascript, Node.js, jQuery, Express.js, Ruby on Rails, HTML5, and CSS3. This list continues to grow, as I'm a passionate life long learner and always looking for ways to push myself in this field. Feel free to connect with me! 
 	</p>
 </div>
 
