--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,10 +1,9 @@
-	
 
 
-<footer class="footer">
-	<p id="footer-p">Copyright - Nick Lathe</p>
-</footer>
 
+            <footer class="footer">
+            	<p id="footer-p">&copy Nick Lathe</p>
+            </footer>
 		</wrapper>
 	</body>
 </html>
