--- a/views/alerts.ejs
+++ b/views/alerts.ejs
@@ -1,7 +1,9 @@
 <% if(typeof alerts !== 'undefined'){ %>
     <% for(key in alerts){ %>
         <% alerts[key].forEach(function(thisMsg){ %>
-            <div class="alert alert-<%= key %>"><%= thisMsg %></div>
+            <div class="alert alert-<%= key %> alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <%= thisMsg %></div>
         <% }); %>
     <% } %>
 <% } %>
