--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<title>SBF</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/script.js" type="text/javascript"></script>
-<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
-<link href="/stylesheet.css" rel="stylesheet">
+    <meta charset=utf-8 />
+    <title>SBF</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="/script.js" type="text/javascript"></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'>
 
-<link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/stylesheet.css" type='text/css' rel="stylesheet">
 
-<body>
+    <body>
+
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title" id="exampleModalLabel">Login</h2>
+                    </div>
+                <div class="modal-body">
+                    <h4>Login</h4>
+                    <form class="form" method="post" action="/login">
+                        <input type="text" class="input-top form-control" name="email" placeholder="Enter Your Email">
+                        <input type="password" class="log-input-btm form-control" name="password" placeholder="Enter Your Password">
+                        <input type="submit" value="Login" class="sign-log-btn pull-right btn btn-primary">
+                    </form>
+                    <h4>Sign Up</h4>
+                    <form class="form" method="post" action="/signup">
+                        <input type="text" class="input-top form-control" name="name" placeholder="Enter Your Name">
+                        <input type="text" class="input-mid-top form-control" name="email" placeholder="Enter Your Email">
+                        <input type="password" class="input-mid-btm form-control" name="password" placeholder="Enter Your Password">
+                        <input type="password" class="input-btm form-control" name="password2" placeholder="Re-Enter Your Password">
+                        <input type="submit" value="Sign-Up" class="sign-log-btn pull-right btn btn-primary">
+                    </form>
+                    <br><br>
+                </div>
+            <div class="modal-footer"></div>
+        </div>
+    </div>
+</div>
 <div id="wrapper">
-<nav class="navbar navbar-default" role="navigation">
- 	<div class="container-fluid">
- 	<div class="col-md-12 col-sm-12">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    	<div class="navbar-header">
-      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        	<span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-      		</button>
-      		<a class="navbar-brand" href="/">Seattle Brewery Finder</a>
-      		<% if(user && typeof user !== undefined) { %>
-			<h5 id="user-greeting">Hello, <%= typeof user.name === "string" ? user.name : "Uknown" %></h5>
-			<% } %>
-    	</div>
+    <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Seattle Brewery Finder</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li>
+                    <% if(user && typeof user !== undefined) { %>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Hello, <%= typeof user.name === "string" ? user.name : "Uknown" %> <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="/list">My List</a></li>
+                            <li><a href="/logout">Logout</a></li>
+                        </ul>
+                    </li>
+                    <% } %>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<!--      		<ul class="nav navbar-nav">
-      		</ul> -->
-      		<% if(user && typeof user !== undefined) { %>
-      		<ul class="nav navbar-nav navbar-right">
-        		<li><a id="navlink"href="/">Home</a></li>
-        		<li><a id="navlink"href="/about">Contact</a></li>
-        		<li><a id="navlink"href="/list">My Breweries</a></li>
-        		<li><a id="navlink"href="/logout">Logout</a></li>
-        	</ul>
-        	<% } else { %>
-        	<ul class="nav navbar-nav navbar-right">
-        		<li><a id="navlink"href="/">Home</a></li>
-        		<li><a id="navlink"href="/about">Contact</a></li>
-        		<li><a id="navlink"href="/login">Login</a></li>
-        		<% } %>
-          	</ul>
-   		</div>
- 	</div>
-</nav>
 
