--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,14 @@
 <% include header %>
 
-<div class="col-md-12 col-sm-12">
-	<ol class="breadcrumb">
-		<li><a href="/">Home</a></li>
-		<li class="active">My Breweries</li>
-	</ol>
-</div>
-
-<div class="col-md-6 col-sm-6 col-md-offset-4 col-md-offset-4">
+<div id="list-outer" class="col-md-6 col-sm-6 col-md-offset-4 col-md-offset-4">
 	<h1 id="fav-list-h1"><%= user.name %>'s Favorite Breweries</h1>
 
 <% for(var i = 0; i < returnedList.length; i++) { %>
 
-<li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a></li>
+<!-- <li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a></li> -->
 
 	<!-- <h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> - <%= returnedList[i].brewery_name %></h4> -->
-<!-- 	<li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a><button name="brewery_id" value="<%= returnedList[i].brewery_id%>" class="btn btn-primary btn-sm">Delete</button></li> -->
+	<li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a><button data-id="<%= returnedList[i].brewery_id %>" type="submit" class="btn btn-primary btn-sm  deleteBrewery">Delete</button></li>
 
 
 <% } %>
